# greycat-sdk-java

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  git2version  pom.xml  project.gcl  publish.sh
native/: jarray.c  jblob.c  jbuffer.c  jctx.c  jdate.c  jduration.c  jenumcall.c  jfunction.c  jgeocode.c  jgraph.c  jobject.c  jplugin.c  jreference.c  jtensor.c  jtime.c  jtype.c
src/main/java/ai/greycat/: Generator.java  GreyCat.java  algebra.java  algebra_n.java  network.java  patterns.java  project_lib.java  std.java  std_n.java
src/main/java/io/greycat/: Array.java  Blob.java  Context.java  Date.java  Duration.java  EnumCall.java  ErrorCallback.java  ExecutionCallback.java  Function.java  FunctionBody.java  GeoCode.java  Graph.java  GreyCatRuntimeError.java  Object.java  Reference.java  Tensor.java  Time.java  Type.java
src/main/java/io/greycat/impl/: ArrayImpl.java  BlobImpl.java  ContextImpl.java  DateImpl.java  DurationImpl.java  EnumCallImpl.java  FunctionImpl.java  GeoCodeImpl.java  GraphImpl.java  GreyCatParseException.java  Main.java  ObjectImpl.java  ReferenceImpl.java  TensorImpl.java  TimeImpl.java  TypeImpl.java
src/test/java/ai/greycat/: Client.java  Sandbox.java
src/test/java/io/greycat/: ContextTest.java  FunctionTest.java  GraphTest.java  ObjectTest.java  TypeTest.java
src/test/java/samples/: Sandbox.java  SwingApp.java
